# ladon

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PUBLIC_RELEASE_SUMMARY.md  README.md  SECURITY_CHECKLIST.md  ladon_project_plan.md  ladon_quick_start_guide.md  pyproject.toml  threat_xdr_project_plan.md
docs/: ARCHITECTURE_DIAGRAMS.md  PROJECT_PLAN.md  PUBSUB_TOPICS.md
infra/bigquery/schemas/: README.md  deploy_schemas.sh  iocs.sql  iocs_schema.yaml  threat_ioc_associations.sql  threat_ioc_associations_schema.yaml  threats.sql  threats_schema.yaml
libs/python/ladon-clients/: pyproject.toml
libs/python/ladon-common/: pyproject.toml
libs/python/ladon-common/ladon_common/: __init__.py  circuit_breaker.py  metrics.py  structured_logging.py
libs/python/ladon-models/: README.md  pyproject.toml
libs/python/ladon-models/ladon_models/: __init__.py  activity.py  detection.py  enums.py  ioc.py  threat.py  validators.py
libs/python/ladon-models/tests/: __init__.py  test_activity.py  test_detection.py  test_ioc.py  test_validators.py
services/collection/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  GCP_RESOURCE_SETUP_GUIDE.md  README.md  SETUP_QUICKREF.md  STORAGE_CLIENT_IMPROVEMENTS.md  build.sh  docker-compose.example.yml  requirements.txt
services/collection/config/: QUICK_START.md  README.md  config.example.yaml  config.test.yaml  config_loader.py
services/collection/docs/: BUILD_INSTRUCTIONS.md  DEPLOY_QUICKSTART.md  DOCKER_RUN_LOCAL.md  GCP_COST_CALCULATOR.md  LOCAL_K8S_GUIDE.md  STORAGE_CLIENT_GUIDE.md  TESTING_GUIDE.md
services/collection/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml.template  service.yaml  serviceaccount.yaml  servicemonitor.yaml
services/collection/k8s-local/: 00-namespace.yaml  01-postgres.yaml  02-redis.yaml  03-configmap.yaml  04-collection-service.yaml  README.md
services/collection/scripts/: README.md  deploy.sh  pre-deploy-check.sh  sample_alienvault_output.json  setup-gcp-resources.sh  test_abusech.py  test_alienvault.py  test_misp.py  test_normalization.py  test_storage.py
services/collection/src/: collection_service.py  config.py  main.py
services/collection/src/clients/: __init__.py  storage_client.py  storage_metrics.py
services/collection/src/collectors/: __init__.py  abuse_ch.py  alienvault_otx.py  base.py  bigquery.py  misp.py  trino.py
services/collection/src/publishers/: __init__.py  pubsub_publisher.py
services/collection/src/threat_extractors/: __init__.py  abusech_threat_extractor.py  alienvault_threat_extractor.py  base.py  mitre_attack.py
services/collection/tests/: conftest.py  test_alienvault_otx.py  test_base_collector.py  test_collection_service.py  test_storage_client.py  test_threat_extractors.py
services/detection/: .env.example  requirements.txt
services/detection/scripts/: test_detection.py
services/detection/src/: __init__.py  config.py  detection_engine.py  main.py  metrics.py
services/normalization/: Dockerfile  README.md  requirements.txt
services/normalization/src/: config.py  main.py  normalization_service.py
services/normalization/tests/: conftest.py  test_normalization_service.py  test_normalizers.py  test_threat_normalizers.py
services/response/: Dockerfile  README.md  requirements.txt
services/response/src/: main.py  models.py  response_engine.py
services/response/tests/: test_response_engine.py
services/storage/: README.md
services/storage/src/: __init__.py  config.py  storage_service.py
services/storage/tests/: __init__.py  conftest.py  test_bigquery_repository.py  test_bigquery_threat_repository.py  test_firestore_repository.py  test_redis_repository.py  test_storage_service.py
(+22 files in other folders)
