[tool.poetry]
name = "ladon-common"
version = "0.1.0"
description = "LADON shared utilities and common code"
authors = ["Your Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
prometheus-client = "^0.17.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
google-cloud-secret-manager = "^2.16.0"
google-cloud-firestore = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
